force-app/main/default/objects/Why_Not_Settings__mdt/Why_Not_Settings__mdt.object-meta.xml
<CustomObject>
    <label>FSL Rule Analyzer Settings</label>
    <pluralLabel>FSL Rule Analyzer Settings</pluralLabel>
</CustomObject>