force-app/main/default/objects/Why_Not_Settings__mdt/fields/Alt_Policy_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Alt_Policy_2_Label__c</fullName>
    <label>Alt Policy 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>