force-app/main/default/objects/Why_Not_Settings__mdt/fields/Availability_Policy_Label__c.field-meta.xml
<CustomField>
    <fullName>Availability_Policy_Label__c</fullName>
    <label>Ignore Availability Policy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>