force-app/main/default/objects/Why_Not_Settings__mdt/fields/Main_Policy_Label__c.field-meta.xml
<CustomField>
    <fullName>Main_Policy_Label__c</fullName>
    <label>Main Policy Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>